# nvcc-feedstock

./: README.md  azure-pipelines.yml  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-win.yml
.ci_support/: linux_64_c_compiler_version11cross_target_platformlinux-64cuda_compilernvcccuda_compiler_version11.8cxx_compiler_version11.yaml  linux_64_c_compiler_version11cross_target_platformlinux-aarch64cuda_compilernvcccuda_compiler_version11.8cxx_compiler_version11.yaml  linux_64_c_compiler_version11cross_target_platformlinux-ppc64lecuda_compilernvcccuda_compiler_version11.8cxx_compiler_version11.yaml  linux_64_cdt_namecos6cross_target_platformlinux-64cuda_compiler_version10.0.yaml  linux_64_cdt_namecos6cross_target_platformlinux-64cuda_compiler_version10.1.yaml  linux_64_cdt_namecos6cross_target_platformlinux-64cuda_compiler_version10.2.yaml  linux_64_cdt_namecos6cross_target_platformlinux-64cuda_compiler_version9.2.yaml  linux_64_cdt_namecos6cross_target_platformlinux-aarch64cuda_compiler_version10.0.yaml  linux_64_cdt_namecos6cross_target_platformlinux-aarch64cuda_compiler_version10.1.yaml  linux_64_cdt_namecos6cross_target_platformlinux-aarch64cuda_compiler_version10.2.yaml  linux_64_cdt_namecos6cross_target_platformlinux-aarch64cuda_compiler_version9.2.yaml  linux_64_cdt_namecos6cross_target_platformlinux-ppc64lecuda_compiler_version10.0.yaml  linux_64_cdt_namecos6cross_target_platformlinux-ppc64lecuda_compiler_version10.1.yaml  linux_64_cdt_namecos6cross_target_platformlinux-ppc64lecuda_compiler_version10.2.yaml  linux_64_cdt_namecos6cross_target_platformlinux-ppc64lecuda_compiler_version9.2.yaml  linux_64_cdt_namecos6cuda_compiler_version10.0.yaml  linux_64_cdt_namecos6cuda_compiler_version10.1.yaml  linux_64_cdt_namecos6cuda_compiler_version10.2.yaml  linux_64_cdt_namecos6cuda_compiler_version9.2.yaml  linux_64_cdt_namecos7cross_target_platformlinux-64cuda_compiler_version11.0.yaml  linux_64_cdt_namecos7cross_target_platformlinux-64cuda_compiler_version11.1.yaml  linux_64_cdt_namecos7cross_target_platformlinux-64cuda_compiler_version11.2.yaml  linux_64_cdt_namecos7cross_target_platformlinux-64cuda_compiler_version11.3.yaml  linux_64_cdt_namecos7cross_target_platformlinux-64cuda_compiler_version11.4.yaml  linux_64_cdt_namecos7cross_target_platformlinux-64cuda_compiler_version11.5.yaml  linux_64_cdt_namecos7cross_target_platformlinux-64cuda_compiler_version11.6.yaml  linux_64_cdt_namecos7cross_target_platformlinux-64cuda_compiler_version11.7.yaml  linux_64_cdt_namecos7cross_target_platformlinux-64cuda_compiler_version11.8.yaml  linux_64_cdt_namecos7cross_target_platformlinux-aarch64cuda_compiler_version11.0.yaml  linux_64_cdt_namecos7cross_target_platformlinux-aarch64cuda_compiler_version11.1.yaml  linux_64_cdt_namecos7cross_target_platformlinux-aarch64cuda_compiler_version11.2.yaml  linux_64_cdt_namecos7cross_target_platformlinux-aarch64cuda_compiler_version11.3.yaml  linux_64_cdt_namecos7cross_target_platformlinux-aarch64cuda_compiler_version11.4.yaml  linux_64_cdt_namecos7cross_target_platformlinux-aarch64cuda_compiler_version11.5.yaml  linux_64_cdt_namecos7cross_target_platformlinux-aarch64cuda_compiler_version11.6.yaml  linux_64_cdt_namecos7cross_target_platformlinux-aarch64cuda_compiler_version11.7.yaml  linux_64_cdt_namecos7cross_target_platformlinux-aarch64cuda_compiler_version11.8.yaml  linux_64_cdt_namecos7cross_target_platformlinux-ppc64lecuda_compiler_version11.0.yaml  linux_64_cdt_namecos7cross_target_platformlinux-ppc64lecuda_compiler_version11.1.yaml  linux_64_cdt_namecos7cross_target_platformlinux-ppc64lecuda_compiler_version11.2.yaml  (+80 more)
.ci_support/migrations/: cuda110.yaml  cuda111.yaml  cuda111_112.yaml  windows_cuda.yaml
.github/: CODEOWNERS
.scripts/: run_win_build.bat
recipe/: activate.sh  conda_build_config.yaml  deactivate.sh  install_cuda.bat  install_nvcc.bat  install_nvcc.sh  meta.yaml  run_test.bat  run_test.sh  test_nvcc.sh
recipe/cmake-tests/: CMakeLists.txt  README.md
recipe/cmake-tests/src/: gpu.cu  main.cc
recipe/linux/: activate.sh  deactivate.sh  install_nvcc.sh  nvcc.sh  test_nvcc.sh
recipe/windows/: activate.bat  deactivate.bat  generate_stub.bat  install_cuda.bat  install_nvcc.bat  nvcc_windows.bat  nvcuda.stub.lib  test_nvcc.bat
